feat: add styles for NotFoundPage

--- a/src/pages/NotFoundPage/ui/NotFoundPage.module.scss
+++ b/src/pages/NotFoundPage/ui/NotFoundPage.module.scss
@@ -6,3 +6,12 @@
   gap: var(--space-md);
   height: 100dvh;
 }
+
+.link {
+  color: var(--accent-color);
+  transition: color 250ms;
+
+  &:hover {
+    color: var(--secondary-color);
+  }
+}
